workshops/ws6/lab/errors.txt
main_prof.cpp:18:17: error: ‘sdds’ is not a namespace-name
 using namespace sdds;
                 ^
main_prof.cpp:18:21: error: expected namespace-name before ‘;’ token
 using namespace sdds;
                     ^
main_prof.cpp:21:15: error: variable or field ‘FirstTen’ declared void
 void FirstTen(TextFile T);
               ^
main_prof.cpp:21:15: error: ‘TextFile’ was not declared in this scope
main_prof.cpp:21:15: note: suggested alternative:
In file included from main_prof.cpp:17:0:
TextFile.h:19:11: note:   ‘seneca::TextFile’
     class TextFile {
           ^
main_prof.cpp: In function ‘int main()’:
main_prof.cpp:25:4: error: ‘TextFile’ was not declared in this scope
    TextFile Empty;
    ^
main_prof.cpp:25:4: note: suggested alternative:
In file included from main_prof.cpp:17:0:
TextFile.h:19:11: note:   ‘seneca::TextFile’
     class TextFile {
           ^
main_prof.cpp:25:13: error: expected ‘;’ before ‘Empty’
    TextFile Empty;
             ^
main_prof.cpp:26:13: error: expected ‘;’ before ‘BadFilename’
    TextFile BadFilename("badFilename");
             ^
main_prof.cpp:29:13: error: expected ‘;’ before ‘E’
    TextFile E;
             ^
main_prof.cpp:30:13: error: expected ‘;’ before ‘S’
    TextFile S("seamus.txt");
             ^
main_prof.cpp:33:11: error: ‘E’ was not declared in this scope
    cin >> E;
           ^
main_prof.cpp:35:12: error: ‘S’ was not declared in this scope
    cout << S << endl;
            ^
main_prof.cpp:36:14: error: ‘FirstTen’ was not declared in this scope
    FirstTen(E);
              ^
main_prof.cpp:45:19: error: ‘Empty’ was not declared in this scope
    cout << "*" << Empty << BadFilename << "*" << endl;
                   ^
main_prof.cpp:45:28: error: ‘BadFilename’ was not declared in this scope
    cout << "*" << Empty << BadFilename << "*" << endl;
                            ^
main_prof.cpp: At global scope:
main_prof.cpp:48:15: error: variable or field ‘FirstTen’ declared void
 void FirstTen(TextFile T) {
               ^
main_prof.cpp:48:15: error: ‘TextFile’ was not declared in this scope
main_prof.cpp:48:15: note: suggested alternative:
In file included from main_prof.cpp:17:0:
TextFile.h:19:11: note:   ‘seneca::TextFile’
     class TextFile {
           ^
